--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#1281BA</color>
+    <color name="colorPrimaryDark">#005b9f</color>
+    <color name="colorAccent">#81d4fa</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
-    <color name="blue_100">#bbdefb</color>
-    <color name="blue_100_32">#52BBDEFB</color>
 </resources>
