--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="lottie_animation_size">300dp</dimen>
     <dimen name="button_transform_info_size">48dp</dimen>
     <dimen name="small_toolbar_height">56dp</dimen>
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
