--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <resources>
     <declare-styleable name="AppWidgetAttrs">
         <attr name="appWidgetBackgroundColor" format="color" />
+        <attr name="appWidgetControlBackgroundColor" format="color" />
         <attr name="appWidgetTextColor" format="color" />
+        <attr name="appWidgetControlTextColor" format="color" />
     </declare-styleable>
 </resources>
