--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,9 +21,11 @@
     </style>
 
     <!-- App Widget Theme -->
-    <style name="ThemeOverlay.Androidbase.AppWidgetContainer" parent="">
-        <item name="appWidgetBackgroundColor">@color/colorPrimary</item>
-        <item name="appWidgetTextColor">@color/white</item>
+    <style name="ThemeOverlay.AndroidBase.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/white</item>
+        <item name="appWidgetControlBackgroundColor">@color/colorPrimary</item>
+        <item name="appWidgetTextColor">@color/colorPrimary</item>
+        <item name="appWidgetControlTextColor">@color/white</item>
     </style>
 
 </resources>
