--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -15,6 +15,9 @@
             android:id="@+id/animations_fragment"
             android:title="@string/animations" />
         <item
+            android:id="@+id/calendar_fragment"
+            android:title="@string/calendar" />
+        <item
             android:id="@+id/menu_login"
             android:title="@string/login" />
         <item
