--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -2,12 +2,12 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/event"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/margin_small"
     android:layout_marginEnd="@dimen/margin_small"
-    style="@style/CardView.AndroidBase.Animation"
     app:cardCornerRadius="@dimen/margin"
     app:cardElevation="8dp">
 
@@ -26,12 +26,12 @@
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:text="@string/animation_1_title"
             android:textAppearance="?attr/textAppearanceBody1"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Event Title" />
 
         <TextView
             android:id="@+id/event_description"
@@ -43,12 +43,12 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="@string/animation_1_description"
             android:textAppearance="?attr/textAppearanceSubtitle2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/event_title" />
+            app:layout_constraintTop_toBottomOf="@+id/event_title"
+            tools:text="Event Description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
