--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -47,10 +47,14 @@
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginEnd="@dimen/activity_vertical_margin"
             android:src="@drawable/ic_add"
-            app:tint="?attr/colorOnPrimary"
             app:backgroundTint="?attr/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:tint="?attr/colorOnPrimary" />
+
+        <include
+            android:id="@+id/progress"
+            layout="@layout/layout_progress" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
