Updating Gradle, AGP, dependencies.

--- a/app/src/main/res/layout/fragment_container_transform.xml
+++ b/app/src/main/res/layout/fragment_container_transform.xml
@@ -61,7 +61,7 @@
             android:contentDescription="@string/info_button"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_info"
-            android:tint="?attr/colorPrimaryVariant"
+            app:tint="?attr/colorPrimaryVariant"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
