--- a/app/src/main/res/layout/list_item_text.xml
+++ b/app/src/main/res/layout/list_item_text.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/listItemTextView"
+        android:id="@+id/list_item_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
