--- a/app/src/main/res/layout/fragment_container_transform.xml
+++ b/app/src/main/res/layout/fragment_container_transform.xml
@@ -85,8 +85,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/text_transform_button_info"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent"
             tools:visibility="visible">
 
             <androidx.constraintlayout.widget.ConstraintLayout
