--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/loadingProgressBackground"
-    android:fitsSystemWindows="true">
+    android:clickable="true"
+    android:fitsSystemWindows="true"
+    android:focusable="true">
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:layout_width="@dimen/progress_bar_size"
