--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -49,6 +49,9 @@
         <action
             android:id="@+id/show_calendar_fragment"
             app:destination="@id/calendar_fragment" />
+        <action
+            android:id="@+id/show_player_fragment"
+            app:destination="@id/player_fragment" />
     </fragment>
     <fragment
         android:id="@+id/account_setup_animation_fragment"
@@ -105,5 +108,8 @@
         android:name="com.rocketinsights.android.ui.TheGreatestRecyclerViewFragment"
         android:label="@string/the_greatest_recyclerview_screen_title"
         tools:layout="@layout/fragment_the_greatest_recyclerview" />
-
+    <fragment
+        android:id="@+id/player_fragment"
+        android:name="com.rocketinsights.android.ui.PlayerFragment"
+        android:label="@string/player" />
 </navigation>
