--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -118,6 +118,6 @@
     <fragment
         android:id="@+id/contacts_fragment"
         android:name="com.rocketinsights.android.ui.ContactsFragment"
-        android:label="@string/contacts"
+        android:label="@string/contacts_screen_title"
         tools:layout="@layout/fragment_contacts" />
 </navigation>
